[gd_scene load_steps=12 format=3 uid="uid://ciinxo8ungh40"]

[ext_resource type="Script" path="res://Enemies/FearMeter/Scripts/fear_meter.gd" id="1_fu6j0"]
[ext_resource type="Texture2D" uid="uid://fn3gumhjobyv" path="res://Enemies/FearMeter/fearbarEDEA.png" id="2_thd7w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m5n5e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4c620"]
bg_color = Color(0.766187, 0.417518, 0.954522, 1)
shadow_color = Color(0, 0, 0, 0.27451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dbstn"]
bg_color = Color(0.103744, 0.103744, 0.103743, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3cr3x"]
bg_color = Color(0.38005, 0.365594, 0.745625, 1)

[sub_resource type="Animation" id="Animation_k601n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bvw73"]
resource_name = "bar_full"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wfbg1"]
resource_name = "fade_in"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jv5wt"]
resource_name = "fade_out"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wt15r"]
_data = {
"RESET": SubResource("Animation_k601n"),
"bar_full": SubResource("Animation_bvw73"),
"fade_in": SubResource("Animation_wfbg1"),
"fade_out": SubResource("Animation_jv5wt")
}

[node name="FearMeter" type="ProgressBar"]
z_index = 1
y_sort_enabled = true
offset_right = 48.0
offset_bottom = 6.0
theme_override_styles/background = SubResource("StyleBoxEmpty_m5n5e")
theme_override_styles/fill = SubResource("StyleBoxFlat_4c620")
value = 50.0
show_percentage = false
script = ExtResource("1_fu6j0")

[node name="DamageBar" type="ProgressBar" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_dbstn")
theme_override_styles/fill = SubResource("StyleBoxFlat_3cr3x")
value = 80.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wt15r")
}

[node name="DecayDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
show_behind_parent = true
z_index = -3
position = Vector2(24, 5)
scale = Vector2(0.015875, 0.015875)
texture = ExtResource("2_thd7w")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_fade_animation_finished"]
[connection signal="timeout" from="DecayDelayTimer" to="." method="_on_decay_delay_timer_timeout"]
